# japanese_realtime_tts

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
colab/: jsut_model_sample.ipynb
jrtts/GlowTTS/: train.py
jrtts/GlowTTS/Networks/: attentions.py  build_model.py  models.py
jrtts/GlowTTS/Utils/: build_dataloader.py  text_utils.py
jrtts/ParallelWaveGAN/: README.md  train.py
jrtts/ParallelWaveGAN/Networks/: build_model.py
jrtts/ParallelWaveGAN/Utils/: build_optimizer.py
jrtts/text_utils/: __init__.py  convert.py  yomi2voca.py
src/GlowTTS/: README.md
src/GlowTTS/AutoEncoder/Networks/: build_model.py  networks.py
src/GlowTTS/Networks/: commons.py  modules.py
src/GlowTTS/Networks/monotonic_align/: setup.py
src/GlowTTS/Utils/: build_critic.py  trainer.py
src/ParallelWaveGAN/Networks/: melgan.py  parallel_wavegan.py
src/ParallelWaveGAN/Utils/: build_critic.py  build_dataloader.py
src/jrtts/GlowTTS/: README.md  download.sh  preprocessing.py  train.py
src/jrtts/GlowTTS/AutoEncoder/: train.py
src/jrtts/GlowTTS/AutoEncoder/Networks/: build_model.py  networks.py
src/jrtts/GlowTTS/AutoEncoder/Utils/: build_critic.py  build_dataloader.py  build_optimizer.py  trainer.py
src/jrtts/GlowTTS/Configs/: base_config.yml  config_multi.yml
src/jrtts/GlowTTS/Networks/: build_model.py  global_style_tokens.py  models.py
src/jrtts/GlowTTS/Networks/monotonic_align/: __init__.py  core.pyx
src/jrtts/GlowTTS/Utils/: build_dataloader.py  build_optimizer.py  trainer.py
src/jrtts/ParallelWaveGAN/Utils/: trainer.py
(+2 files in other folders)
