[metadata]
name = japanese_realtime_tts
version = attr: jrtts.__version__
long_description = README.md

[option]
install_requires =
  numpy
  Click==7.0
  Cython==0.29.12
  PyYAML==5.1.1
  mecab-python3==0.996.2
  jaconv==0.2.4
  zenhan==0.5.2

package_dir=
  = jrtts

packages = find:

[options.packages.find]
where = jrtts
