[metadata]
name = japanese_realtime_tts
version = attr: src.jrtts.__version__
long_description = README.md
license = MIT

[options]
install_requires =
  numpy
  Click==7.0
  Cython==0.29.12
  PyYAML==5.1.1
  mecab-python3==0.996.2
  jaconv==0.2.4
  zenhan==0.5.2
  pykakasi==1.0

packages = find:
package_dir=
  =src
[options.packages.find]
where=src